SETUP-APP-AND-STYLES: Add icons and bottom navigation view for app

--- a/tailormade_dls/src/main/res/values/strings.xml
+++ b/tailormade_dls/src/main/res/values/strings.xml
@@ -39,4 +39,10 @@
     <string name="order_total_discount_value_label">-</string>
     <string name="order_total_price_label">Total Price</string>
     <string name="order_total_price_value_label">0</string>
+
+    <string name="home_menu_label">Home</string>
+    <string name="chat_menu_label">Chat</string>
+    <string name="order_menu_label">Order</string>
+    <string name="cart_menu_label">Cart</string>
+    <string name="profile_menu_label">Profile</string>
 </resources>
