--- a/features/tailormade_profile/src/main/res/values/strings.xml
+++ b/features/tailormade_profile/src/main/res/values/strings.xml
@@ -4,4 +4,12 @@
     <string name="update_profile_label">Update Profile</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="occupation_label">Occupation</string>
+    <string name="about_company_label">In what company do you work?</string>
+    <string name="about_occupation_label">What\'s your occupation?</string>
+    <string name="about_occupation_city_label">Where city do you work?</string>
+    <string name="education_label">Education</string>
+    <string name="about_school_label">Your School/University</string>
+    <string name="about_major_label">What\'s your department/majors?</string>
+    <string name="about_education_city_label">Where city do you study?</string>
 </resources>
