--- a/features/tailormade_profile/src/main/res/values/strings.xml
+++ b/features/tailormade_profile/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="location_label">Location</string>
     <string name="update_profile_label">Update Profile</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="birth_date_picker_label">Birth Date Picker</string>
+    <string name="birth_date_picker_title_label">Choose Date</string>
 </resources>
