--- a/features/tailormade_search/src/main/res/values/strings.xml
+++ b/features/tailormade_search/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="search_state">Find anything you want!</string>
     <string name="search_description_state">Type any design category or tailors.</string>
+    <string name="search_label">Search</string>
 </resources>
