SETUP-SEARCH-ACTIVITY: Added viewmodel and adapter

--- a/libraries/tailormade_dls/src/main/res/values/strings.xml
+++ b/libraries/tailormade_dls/src/main/res/values/strings.xml
@@ -45,4 +45,6 @@
     <string name="order_menu_label">Order</string>
     <string name="cart_menu_label">Cart</string>
     <string name="profile_menu_label">Profile</string>
+    <string name="profile_name_label">Profile name</string>
+    <string name="profile_location_label">Profile Location</string>
 </resources>
