SETUP-SEARCH-ACTIVITY: Setup viewpager for search result

--- a/features/tailormade_search/src/main/res/values/strings.xml
+++ b/features/tailormade_search/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="search_state">Find anything you want!</string>
     <string name="search_description_state">Type any design category or tailors.</string>
     <string name="search_label">Search</string>
+    <string name="design_label">Design</string>
+    <string name="tailor_label">Tailor</string>
 </resources>
