SETUP-SORT-AND-FILTER: Setup sort and filter chip group layout

--- a/features/tailormade_search/src/main/res/values/strings.xml
+++ b/features/tailormade_search/src/main/res/values/strings.xml
@@ -4,6 +4,9 @@
     <string name="search_label">Search</string>
     <string name="design_label">Design</string>
     <string name="tailor_label">Tailor</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="filter_label">Filter</string>
+    <string name="sort_newest_label">Newest</string>
+    <string name="sort_oldest_label">Oldest</string>
+    <string name="sort_a_to_z_label"> A to Z</string>
+    <string name="sort_z_to_a_label"> Z to A</string>
 </resources>
