--- a/features/tailormade_search/src/main/res/values/strings.xml
+++ b/features/tailormade_search/src/main/res/values/strings.xml
@@ -4,6 +4,6 @@
     <string name="search_label">Search</string>
     <string name="design_label">Design</string>
     <string name="tailor_label">Tailor</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="search_no_data_state">Oops! No results found</string>
+    <string name="search_description_no_data_state">Try searching with another keyword.</string>
 </resources>
