--- a/libraries/tailormade_dls/src/main/res/values/strings.xml
+++ b/libraries/tailormade_dls/src/main/res/values/strings.xml
@@ -45,4 +45,8 @@
     <string name="order_menu_label">Order</string>
     <string name="cart_menu_label">Cart</string>
     <string name="profile_menu_label">Profile</string>
+    <string name="profile_name_label">Profile name</string>
+    <string name="profile_city_label">City</string>
+    <string name="chat_now_label">Chat now</string>
+    <string name="edit_profile_label">Edit Profile</string>
 </resources>
