SETUP-PROFILE-MAIN-PAGE: Setup layout for profile about and profile view model
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_profile/src/main/res/values/strings.xml
+++ b/features/tailormade_profile/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="about_label">About</string>
+    <string name="edit_label">Edit</string>
     <string name="location_label">Location</string>
     <string name="update_profile_label">Update Profile</string>
     <string name="occupation_label">Occupation</string>
@@ -10,6 +12,10 @@
     <string name="about_school_label">Your School/University</string>
     <string name="about_major_label">What\'s your department/majors?</string>
     <string name="about_education_city_label">Where city do you study?</string>
+    <string name="about_address_value">Lives in <b>%s</b></string>
+    <string name="about_occupation_value">Works as <b>%s</b></string>
+    <string name="about_occupation_city_value"> at<b>%s</b></string>
+    <string name="about_school_value">Studied at <b>%s</b></string>
 
     <!-- Preference Titles -->
     <string name="pref_title_invite_friends_settings">Invite friends</string>
