--- a/features/tailormade_profile/src/main/res/values/strings.xml
+++ b/features/tailormade_profile/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
 <resources>
     <string name="about_label">About</string>
     <string name="edit_label">Edit</string>
+    <string name="works_label">Works </string>
+    <string name="studied_label">Studied</string>
     <string name="location_label">Location</string>
     <string name="update_profile_label">Update Profile</string>
     <string name="occupation_label">Occupation</string>
@@ -13,9 +15,10 @@
     <string name="about_major_label">What\'s your department/majors?</string>
     <string name="about_education_city_label">Where city do you study?</string>
     <string name="about_address_value">Lives in <b>%s</b></string>
-    <string name="about_occupation_value">Works as <b>%s</b></string>
-    <string name="about_occupation_city_value"> at<b>%s</b></string>
-    <string name="about_school_value">Studied at <b>%s</b></string>
+    <string name="about_occupation_value"> as <b>%s</b></string>
+    <string name="about_occupation_company_value"> at<b>%s</b></string>
+    <string name="about_school_value"> at <b>%s</b></string>
+    <string name="about_school_major_value"> in <b>%s</b> major</string>
 
     <!-- Preference Titles -->
     <string name="pref_title_invite_friends_settings">Invite friends</string>
