SETUP-DESIGN-DETAIL-LAYOUT: Add layout for size detail
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/libraries/tailormade_dls/src/main/res/values/strings.xml
+++ b/libraries/tailormade_dls/src/main/res/values/strings.xml
@@ -45,4 +45,9 @@
     <string name="order_menu_label">Order</string>
     <string name="cart_menu_label">Cart</string>
     <string name="profile_menu_label">Profile</string>
+    <string name="size_chest_label">Chest</string>
+    <string name="size_waist_label">Waist</string>
+    <string name="size_hips_label">Hips</string>
+    <string name="size_neck_to_waist_label">Neck to Waist</string>
+    <string name="size_inseam_label">Inseam</string>
 </resources>
