SETUP-DESIGN-DETAIL-LAYOUT: Fix styling and add option menu
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_design_detail/src/main/res/values/strings.xml
+++ b/features/tailormade_design_detail/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="available_color_label">Available Color</string>
     <string name="description_label">Description</string>
     <string name="read_more_label">Read more</string>
+    <string name="search_label">Search</string>
 </resources>
