SETUP-DESIGN-DETAIL-LAYOUT: Added bottom navigation menu
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_design_detail/src/main/res/values/strings.xml
+++ b/features/tailormade_design_detail/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="description_label">Description</string>
     <string name="read_more_label">Read more</string>
     <string name="search_label">Search</string>
+    <string name="chat_label">Chat</string>
+    <string name="cart_label">Cart</string>
+    <string name="order_now_label">Order Now</string>
 </resources>
