--- a/features/tailormade_search/src/main/res/values/strings.xml
+++ b/features/tailormade_search/src/main/res/values/strings.xml
@@ -19,4 +19,8 @@
     <string name="filter_tailors_label">Filter Tailors</string>
     <string name="lowest_price_hint">Rp1000</string>
     <string name="highest_price_hint">Rp1000000</string>
+    <string name="search_design_empty_state_title">Design not found.</string>
+    <string name="search_design_empty_state">Try to find design with another keyword.</string>
+    <string name="search_tailor_empty_state_title">Tailor not found.</string>
+    <string name="search_tailor_empty_state">Try to find tailor with another keyword.</string>
 </resources>
