--- a/features/tailormade_chat/src/main/res/values/strings.xml
+++ b/features/tailormade_chat/src/main/res/values/strings.xml
@@ -3,6 +3,6 @@
 
     <string name="delete_chat_alert_dialog_title">Delete Chat?</string>
     <string name="delete_chat_alert_dialog_content">You’ll delete all chat history with </string>
-    <string name="delete_chat_alert_dialog_cancel_button">CANCEL</string>
-    <string name="delete_chat_alert_dialog_delete_button">DELETE</string>
+    <string name="delete_chat_alert_dialog_cancel_button">Cancel</string>
+    <string name="delete_chat_alert_dialog_delete_button">Delete</string>
 </resources>
