CART: Add cart layout, convert image to webp
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="dashboard_title_state">Hello!</string>
     <string name="dashboard_description_state">Tailors near you will be shown here</string>
     <string name="preview_label">Preview</string>
+    <string name="cart_title_state">Empty cart...</string>
+    <string name="cart_description_state">Let’s add some design to your cart!</string>
 </resources>
