CHECKOUT: Add layout, adapter, and UiModel for bottom sheet edit measurement
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="edit_measurement_label">Edit measurement</string>
     <string name="special_instructions_label">Special Instructions</string>
     <string name="make_order_label">Make order</string>
+    <string name="edit_measurements_label">Edit Measurements</string>
+    <string name="custom_measurement_label">Custom Measurement</string>
 </resources>
