CHECKOUT: Implement get cart on viewmodel and added layout for order total card
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,8 @@
     <string name="make_order_label">Make order</string>
     <string name="edit_measurements_label">Edit Measurements</string>
     <string name="custom_measurement_label">Custom Measurement</string>
-    
+    <string name="payment_total_label">Payment Total</string>
+
     <string-array name="edit_measurement_type_list">
         <item>Chest</item>
         <item>Waist</item>
