--- a/libraries/tailormade_dls/src/main/res/values/strings.xml
+++ b/libraries/tailormade_dls/src/main/res/values/strings.xml
@@ -40,6 +40,7 @@
     <string name="order_total_discount_value_label">-</string>
     <string name="order_total_price_label">Total Price</string>
     <string name="order_total_price_value_label">0</string>
+    <string name="payment_total_label">Payment Total</string>
 
     <string name="home_menu_label">Home</string>
     <string name="chat_menu_label">Chat</string>
