TAILOR_DASHBOARD: Setup tailor dashboard layout and UI functionality
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/tailor-app/src/main/res/values/strings.xml
+++ b/tailor-app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">TailorMade</string>
     <string name="your_design_label">Your Design</string>
     <string name="add_label">Add</string>
+    <string name="dashboard_title_state">Hello, tailor!</string>
+    <string name="dashboard_description_state">Let’s start adding your designs to attract customer by tapping the button above !</string>
 </resources>
