TAILOR_ADD_EDIT_DESIGN: Add bottom sheet for add size
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_design_detail/src/main/res/values/strings.xml
+++ b/features/tailormade_design_detail/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     <string name="description_design_information_label">Description Design Information</string>
     <string name="design_description_label">Description</string>
     <string name="add_size_label">Add Size</string>
+    <string name="detail_label">Detail</string>
+    <string name="cm_label">cm</string>
 </resources>
