TAILOR_ADD_EDIT_DESIGN: Add settings for color picker
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/tailor-app/src/main/res/values/strings.xml
+++ b/tailor-app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">TailorMade</string>
+    <string name="app_name">TailorMade\'s Tailor</string>
     <string name="your_design_label">Your Design</string>
     <string name="add_label">Add</string>
     <string name="dashboard_title_state">Hello, tailor!</string>
