TAILOR_ORDERS: Add layout and fragment for recent orders
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/libraries/tailormade_dls/src/main/res/values/strings.xml
+++ b/libraries/tailormade_dls/src/main/res/values/strings.xml
@@ -59,4 +59,5 @@
     <string name="size_inseam_label">Inseam</string>
     <string name="accept_label">Accept</string>
     <string name="reject_label">Reject</string>
+    <string name="order_total_status_label">Status</string>
 </resources>
