TAILOR_ORDERS: Added order detail layout
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/libraries/tailormade_dls/src/main/res/values/strings.xml
+++ b/libraries/tailormade_dls/src/main/res/values/strings.xml
@@ -60,4 +60,5 @@
     <string name="accept_label">Accept</string>
     <string name="reject_label">Reject</string>
     <string name="order_total_status_label">Status</string>
+    <string name="payment_total_label">Payment Total</string>
 </resources>
