SWAP_FACE_DYNAMIC_DELIVERY_MODULE: Init module
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">TailorMade</string>
     <string name="title_dls">Design Language System for TailorMade</string>
+    <string name="title_tailormade_face_swap">Face Swap</string>
 </resources>
