--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,5 @@
     <string name="measurement_details_label">Measurement Details</string>
     <string name="apply_label">Apply</string>
     <string name="history_label">History</string>
+    <string name="cm">cm</string>
 </resources>
