INTEGRATE_USER_APP: Fix profile
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_profile/src/main/res/values/strings.xml
+++ b/features/tailormade_profile/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="pref_title_sign_out_settings">Sign out</string>
     <string name="settings_label">Settings</string>
     <string name="edit_profile_label">Edit Profile</string>
+    <string name="design_label">Design</string>
 </resources>
