--- a/features/tailormade_profile/src/main/res/values/strings.xml
+++ b/features/tailormade_profile/src/main/res/values/strings.xml
@@ -20,6 +20,12 @@
     <string name="about_school_value"> at <b>%s</b></string>
     <string name="about_school_major_value"> in <b>%s</b> major</string>
 
+    <string name="type_about">ABOUT</string>
+    <string name="type_profile">PROFILE</string>
+
+    <!-- Error messages -->
+    <string name="phone_number_invalid">Phone number is not valid.</string>
+
     <!-- Preference Titles -->
     <string name="pref_title_invite_friends_settings">Invite friends</string>
     <string name="pref_title_notification_settings">Notification</string>
