--- a/libraries/tailormade_dls/src/main/res/values/strings.xml
+++ b/libraries/tailormade_dls/src/main/res/values/strings.xml
@@ -63,4 +63,5 @@
     <string name="order_total_status_label">Status</string>
 
     <string name="action_close">Close</string>
+    <string name="loading_dialog_text">Please Wait...</string>
 </resources>
