INTEGRATE_TAILOR_APP: Change bottom nav to custom layout, fix add to cart and checkout item
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_design_detail/src/main/res/values/strings.xml
+++ b/features/tailormade_design_detail/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
 
     <string name="design_added">Design added.</string>
     <string name="design_updated">Design updated.</string>
+    <string name="design_added_to_cart">Design successfully added to cart.</string>
 </resources>
