--- a/libraries/tailormade_dls/src/main/res/values/strings.xml
+++ b/libraries/tailormade_dls/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="notification_time_label">Notification time</string>
     <string name="notification_title_label">Notification title</string>
     <string name="notification_content_label">Notification content</string>
-    <string name="chat_content_send_time_label">Chat sent time</string>
+    <string name="chat_content_send_time_label">08:49</string>
     <string name="chat_content_reply_time_label">Chat reply time</string>
     <string name="order_title_label">Order title</string>
     <string name="order_price_label">Order price</string>
