INCREASE-AND-DECREASE-CART-ITEM: Fix cart edit and delete item
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/libraries/tailormade_dls/src/main/res/values/strings.xml
+++ b/libraries/tailormade_dls/src/main/res/values/strings.xml
@@ -63,5 +63,6 @@
     <string name="order_total_status_label">Status</string>
 
     <string name="action_close">Close</string>
-    <string name="loading_dialog_text">Please Wait...</string>
+    <string name="loading_dialog_text">Please Wait…</string>
+    <string name="delete_cart_item_text">Cart item deleted.</string>
 </resources>
